fixed the bold tag

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     <h4 class="text-xl font-bold mb-2 text-neon-yellow">Section Distribution System</h4>
                     <p class="text-sm text-gray-500 mb-3">Data Processing/Automation</p>
                     <p class="text-gray-400">
-                        Automated section distribution by reading data from a <b>PDF</b>, processing the information, and creating individual **Excel sheets** by applying specific filters.
+                        Automated section distribution by reading data from a <b>PDF</b>, processing the information, and creating individual <b>Excel sheets</b> by applying specific filters.
                     </p>
                     <div class="mt-4 text-xs font-semibold">
                         <span class="px-2 py-1 bg-neon-yellow text-dark-bg rounded-full mr-1">Python</span>
@@ -557,4 +557,5 @@
     </script>
 </body>
 </html>
+
 
