fixed linkedin and mail

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                 </p>
             </div>
             <div class="mt-8 flex flex-wrap gap-4 text-sm sm:text-base">
-                <a href="mailto:+8801880830398" class="px-5 py-2 rounded-lg bg-action-btn text-dark-bg font-bold transition hover:opacity-80">
+                <a href="mailto:msafwaan30@gmail.com" class="px-5 py-2 rounded-lg bg-action-btn text-dark-bg font-bold transition hover:opacity-80">
                     <span class="glitch-text">CONTACT &gt;</span>
                 </a>
-                <a href="https://linkedin.com/in/your_profile" target="_blank" class="px-5 py-2 rounded-lg border-2 border-neon-cyan text-neon-cyan font-bold transition hover:bg-neon-cyan hover:text-dark-bg">
+                <a href="https://www.linkedin.com/in/safwaan30/" target="_blank" class="px-5 py-2 rounded-lg border-2 border-neon-cyan text-neon-cyan font-bold transition hover:bg-neon-cyan hover:text-dark-bg">
                     LINKEDIN
                 </a>
             </div>
@@ -557,5 +557,6 @@
     </script>
 </body>
 </html>
+
 
 
